refactor(challenge): 루틴 일괄 수정 dto record로 변경